--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@marketprotocol/types",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Library for interacting with MARKET Protocol solidity contracts",
   "keywords": [
     "MARKET Protocol",
@@ -33,8 +33,8 @@
   },
   "homepage": "https://marketprotocol.io",
   "scripts": {
-    "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
-    "lint:fix": "tslint --fix -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
+    "lint": "tslint -t codeFrame 'types/**/*.ts' 'test/**/*.ts'",
+    "lint:fix": "tslint --fix -t codeFrame 'types/**/*.ts' 'test/**/*.ts'",
     "prebuild": "rimraf dist",
     "build": "tsc --module commonjs",
     "test": "jest",
@@ -45,8 +45,7 @@
     "semantic-release": "semantic-release",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
     "precommit": "lint-staged && npm run build && npm run test:prod",
-    "typechain":
-      "typechain \"./node_modules/market-solidity/build/contracts/+($npm_package_config_typechain_include).json\" --outDir types --force"
+    "typechain": "typechain \"./node_modules/market-solidity/build/contracts/+($npm_package_config_typechain_include).json\" --outDir types --force"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -91,11 +90,12 @@
     },
     "collectCoverage": true
   },
-  "dependencies": {
+  "peerDependencies": {
     "bignumber.js": "^7.2.1",
     "web3": "^0.20.6"
   },
   "devDependencies": {
+    "@0xproject/typescript-typings": "^0.3.2",
     "@types/jest": "^22.2.3",
     "@types/node": "^10.1.4",
     "commitizen": "^2.10.1",
