--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "semantic-release": "semantic-release",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
     "precommit": "lint-staged && npm run build && npm run test:prod",
+    "postinstall": "npm run typechain",
     "typechain": "typechain \"./node_modules/market-solidity/build/contracts/+($npm_package_config_typechain_include).json\" --outDir types --force"
   },
   "lint-staged": {
@@ -96,22 +97,22 @@
   },
   "devDependencies": {
     "@0xproject/typescript-typings": "^0.3.2",
-    "@types/jest": "^22.2.3",
-    "@types/node": "^10.1.4",
+    "@types/jest": "^23.0.0",
+    "@types/node": "^10.3.2",
     "commitizen": "^2.10.1",
     "coveralls": "^3.0.1",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^0.14.3",
-    "jest": "^22.4.3",
-    "lint-staged": "^7.1.2",
-    "market-solidity": "^0.0.28",
-    "prettier": "^1.13.2",
+    "jest": "^23.1.0",
+    "lint-staged": "^7.1.3",
+    "market-solidity": "^1.0.1",
+    "prettier": "^1.13.5",
     "ts-jest": "^22.4.6",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-config-standard": "^7.0.0",
-    "typechain": "^0.1.5",
-    "typescript": "^2.8.3",
+    "typechain": "^0.2.1",
+    "typescript": "^2.9.1",
     "validate-commit-msg": "^2.14.0",
     "web3-fake-provider": "^0.1.0"
   }
