--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "outDir": "dist/lib",
     "esModuleInterop": true,
     "typeRoots": [
+      "node_modules/@0xproject/typescript-typings/types",
       "node_modules/@types"
     ]
   },
