--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@marketprotocol/types",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Typescript defintions for MARKET Protocol smart contract ABIs",
   "keywords": [
     "MARKET Protocol",
@@ -13,9 +13,8 @@
     "decentralized exchange",
     "exchange"
   ],
-  "main": "dist/index.umd.js",
-  "module": "dist/index.es5.js",
-  "typings": "dist/types/index.d.ts",
+  "main": "dist/lib/index.js",
+  "types": "dist/types/index.d.ts",
   "files": [
     "dist"
   ],
