--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ notifications:
 node_js:
   - lts/*
 script:
-  - npm run build && npm run test:prod
+  - npm run test:prod
 after_success:
   - npm run report-coverage
   - npm run semantic-release
