--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "build": "tsc --module commonjs",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:prod": "npm run lint && npm run coverage",
+    "test:prod": "npm run lint && npm run build && npm run coverage",
     "coverage": "npm run test -- --coverage --no-cache",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "commit": "git-cz",
     "semantic-release": "semantic-release",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "precommit": "lint-staged && npm run build && npm run test:prod",
+    "precommit": "lint-staged",
     "typechain": "typechain \"./node_modules/market-solidity/build/contracts/+($npm_package_config_typechain_include).json\" --outDir types --force"
   },
   "lint-staged": {
@@ -73,7 +73,7 @@
     "transform": {
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx)$",
     "moduleFileExtensions": [
       "ts",
       "tsx",
@@ -86,10 +86,10 @@
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 85,
-        "functions": 95,
-        "lines": 95,
-        "statements": 95
+        "branches": 50,
+        "functions": 50,
+        "lines": 50,
+        "statements": 50
       }
     },
     "collectCoverage": true
