Initial commit for upgrading types to support web3-1.0.0

--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "decentralized exchange",
     "exchange"
   ],
-  "main": "dist/lib/index.js",
-  "types": "dist/types/index.d.ts",
+  "types": "types/index.d.ts",
   "files": [
-    "dist"
+    "types"
   ],
   "author": "Robert Jordan <robert@marketprotocol.io>",
   "repository": {
@@ -37,7 +36,6 @@
   "scripts": {
     "lint": "tslint -t codeFrame 'types/**/*.ts' 'test/**/*.ts'",
     "lint:fix": "tslint --fix -t codeFrame 'types/**/*.ts' 'test/**/*.ts'",
-    "prebuild": "rimraf dist",
     "build": "tsc --module commonjs",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -48,7 +46,7 @@
     "semantic-release": "semantic-release",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
     "precommit": "lint-staged",
-    "typechain": "typechain \"./node_modules/@marketprotocol/marketprotocol/build/contracts/+($npm_package_config_typechain_include).json\" --outDir types --force"
+    "typechain": "typechain --target=web3-1.0.0 --outDir types \"./node_modules/@marketprotocol/marketprotocol/build/contracts/+($npm_package_config_typechain_include).json\""
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -96,28 +94,27 @@
   },
   "dependencies": {
     "bignumber.js": "^7.2.1",
-    "web3": "^0.20.6"
+    "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
-    "@0xproject/types": "^0.8.1",
-    "@0xproject/typescript-typings": "^0.4.1",
     "@marketprotocol/marketprotocol": "^1.4.0",
-    "@types/jest": "^23.1.2",
-    "@types/node": "^10.3.6",
+    "@types/jest": "^23.3.2",
+    "@types/node": "^10.10.1",
+    "@types/web3": "^1.0.5",
     "commitizen": "^2.10.1",
-    "coveralls": "^3.0.1",
+    "coveralls": "^3.0.2",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^0.14.3",
-    "jest": "^23.2.0",
-    "lint-staged": "^7.2.0",
+    "jest": "^23.6.0",
+    "lint-staged": "^7.2.2",
     "market-solidity": "^1.1.0",
-    "prettier": "^1.13.6",
-    "ts-jest": "^22.4.6",
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.13.0",
-    "tslint-config-standard": "^7.1.0",
-    "typechain": "^0.2.4",
-    "typescript": "^2.9.2",
+    "prettier": "^1.14.2",
+    "ts-jest": "^23.1.4",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-config-standard": "^8.0.1",
+    "typechain": "^0.3.5",
+    "typescript": "^3.0.3",
     "validate-commit-msg": "^2.14.0",
     "web3-fake-provider": "^0.1.0"
   }
