--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "strict": true,
     "sourceMap": true,
     "declaration": true,
+    "declarationDir": "dist/types",
+    "outDir": "dist/lib",
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
