--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "decentralized exchange",
     "exchange"
   ],
-  "main": "dist/lib/index.js",
-  "types": "dist/types/index.d.ts",
+  "types": "types/index.d.ts",
   "files": [
-    "dist"
+    "types"
   ],
   "author": "Robert Jordan <robert@marketprotocol.io>",
   "repository": {
@@ -37,9 +36,7 @@
   "scripts": {
     "lint": "tslint -t codeFrame 'types/**/*.ts' 'test/**/*.ts'",
     "lint:fix": "tslint --fix -t codeFrame 'types/**/*.ts' 'test/**/*.ts'",
-    "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs",
-    "test:prod": "npm run lint && npm run build",
+    "test:prod": "npm run lint",
     "commit": "git-cz",
     "semantic-release": "semantic-release",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
@@ -66,24 +63,24 @@
     }
   },
   "dependencies": {
-    "bignumber.js": "^7.2.1",
+    "bignumber.js": "^8.0.1",
     "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
     "@marketprotocol/marketprotocol": "^1.4.0",
-    "@types/node": "^10.12.0",
-    "@types/web3": "^1.0.11",
+    "@types/node": "^10.12.6",
+    "@types/web3": "^1.0.12",
     "commitizen": "^3.0.4",
     "cz-conventional-changelog": "^2.1.0",
-    "husky": "^1.1.2",
-    "lint-staged": "^7.3.0",
+    "husky": "^1.1.3",
+    "lint-staged": "^8.0.4",
     "market-solidity": "^1.1.0",
-    "prettier": "^1.14.3",
+    "prettier": "^1.15.2",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-standard": "^8.0.1",
-    "typechain": "^0.3.8",
-    "typescript": "^3.1.3",
+    "typechain": "^0.3.9",
+    "typescript": "^3.1.6",
     "validate-commit-msg": "^2.14.0",
     "web3-fake-provider": "^0.1.0"
   }
