--- a/package.json
+++ b/package.json
@@ -67,14 +67,13 @@
     "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
-    "@marketprotocol/marketprotocol": "^1.4.0",
+    "@marketprotocol/marketprotocol": "^2.0.0-alpha",
     "@types/node": "^10.12.6",
     "@types/web3": "^1.0.12",
     "commitizen": "^3.0.4",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.1.3",
     "lint-staged": "^8.0.4",
-    "market-solidity": "^1.1.0",
     "prettier": "^1.15.2",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
